# dotfiles

./: .editorconfig  .gitignore  .gitleaks.toml  .nvim.lua  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cliff.toml
.dotter/: AGENTS.md  global.toml  post_deploy.sh  pre_deploy.bat  pre_deploy.sh  windows.toml  wsl.toml
LazyVim/: lazyvim.json
agent/: AGENTS.md
alacritty/: alacritty.toml
amp/: AGENTS.md  settings.json
aria2/: aria2.conf
bub/bub/: pyproject.toml
bun/: .bunfig.toml
cargo/: config.toml
chromium/: chromium-flags.conf
claude-code/: CLAUDE.md  settings.json
cliamp/: config.toml
cliproxyapi/: config.yaml
codex/: AGENTS.md  config.toml  hooks.json
conda/: condarc
copilot/: copilot-instructions.md  lsp-config.json  mcp-config.json  settings.json
docker/: config.json
droid/: config.json  hooks.json  mcp.json  settings.json
fish/: config.fish  fish_plugins
fontconfig/: fonts.conf
git/: config  config-github  ignore  ignore-pkgbuild
glab/: config.yml
helix/: config.toml  languages.toml
jj/: config.toml
julia/: startup.jl
karabiner/: karabiner.json
kitty/: kitty.conf
kwallet/: kwalletrc
mako/: config
mihomo/: config.yaml
netrc/: .netrc
npm/: .npmrc
npmrc/: .npmrc
nvim/: lazyvim.json
ollama/: ollama.fish
opencode/: gateway-azure.json  gateway-cn-models.json  gateway-providers.json.j2  models-cn-meta.json
pi/: AGENTS.md  auth.json  gateway-ali.json  gateway-azure.json  gateway-cn-models.json  gateway-providers.json.j2  models-cn-meta.json  models.json  settings.json  subagents.json
(+225 files in other folders)
